# ttt

./: .gitignore  README.md  pyproject.toml
binaries/preprocessing/: analyze.py  preprocess_liver_seg.py  preprocess_total_segmentator_ds.py
binaries/train/: evaluate.py  split.py  train.py  train_btcv.py  train_indexes.json  train_liver.py  val_indexes.json
binaries/visualization/: predict.py  predict_from_raw.py  viz_preprocessed.py  viz_raw.py
src/python/core/: benchmarks.py  dataset.py  volume.py
src/python/inference/: sliding_window_inference.py
src/python/io/: niifty_readers.py
src/python/models/: unetr.py  vit_encoder.py
src/python/preprocessing/: preprocessing.py  transform.py
src/python/preprocessing/interpolation/: utils.py
src/python/preprocessing/io/: niifty_readers.py
src/python/tests/: test_losses.py  test_metrics.py  test_train_operator.py
src/python/training/: experiment_evaluator.py  losses.py  metrics.py  training_operator.py
src/rust/: Cargo.toml  pyproject.toml
src/rust/src/: lib.rs
