[tool.poetry]
name = "ttt"
version = "0.0.0"
description = ""
authors = ["Leo Alberge <alberge.leo@gmail.com>"]


[tool.poetry.dependencies]
python="^3.11"
SimpleITK = "2.3.0"
marshmallow = "3.20.1"
marshmallow-dataclass = "8.6.0"
marshmallow-enum = "1.5.1"
marshmallow-union = "0.1.15.post1"
pydicom = "2.4.3"
matplotlib = "3.6.3"
tqdm="4.66.2"