[package]
name = "ttt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ttt_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.20.0"
nalgebra = "0.32.3"
numpy = "0.20.0"
rayon = "1.8.0"

[dependencies.ndarray]
version = "0.15.6"
features = ["rayon", "approx"]